# techstorm

model/: .gitignore  README.md  app.py  best_waste_model.tflite  converter.py  dockerfile  main.py  pyproject.toml  render.yaml  requirements.txt  vercel.json  waste_segregation.ipynb
